<resources>
    <string name="app_name">About Me</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Text</string>
    <string name="Web">Web</string>
    <string name="Toast">Toast</string>
    <string name="Image">Image</string>
    <string name="Dialog">Dialog</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_toast">ToastActivity</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_quinn_added">QuinnAdded</string>
</resources>
